<resources>
    <string name="generic_error">Please try again later</string>
    <string name="generic_internet_error">Please check your internet connection</string>
    <string name="dialog_uploading_message">Your BeSafe information is currently being uploaded.\n\nPlease do not close the app.</string>
    <string name="dialog_error_uploading_message">An error occurred while uploading your information, please try again.</string>
    <string name="dialog_error_uploading_positive">Try again</string>
    <string name="dialog_error_uploading_negative">Cancel</string>
    <string name="title_help">Help</string>
    <string name="share_this_app_content">Join me in stopping the spread of COVID-19! Download BeSafe, an app from Visual Diagnoser. #COVID19 #coronaviruskenya #stayhomesavelives</string>
    <string name="share_this_app_title">Help stop the spread of COVID-19!</string>
    <string name="share_this_app_content_html">Join me in stopping the spread of COVID-19! Download BeSafe, an app from Visual Diagnoser. #COVID19 #coronaviruskenya #stayhomesavelives</string>
    <string name="service_ok_title">BeSafe is active</string>
    <string name="service_ok_body"> Keep BeSafe active when you leave home or are in public places.</string>
    <string name="service_not_ok_title">Make sure BeSafe is active</string>
    <string name="service_not_ok_body">BeSafe is currently inactive. Make sure it’s active before you leave home and when in public places.</string>
    <string name="service_not_ok_action">Check app now</string>
    <string name="intro_headline">Together we can stop the spread of COVID-19</string>
    <string name="intro_content">BeSafe has been developed by Visual Diagnoser to help keep the community safe from the spread of coronavirus.\n\nBeSafe will securely note contact that you have with other users of the app. This will allow you to know if you have been in close contact with someone who has tested positive to the virus and either go to quarantine or be tested.\n\nTogether we can help stop the spread and stay healthy.</string>
    <string name="intro_disclaimer_data">Please head to <a href="https://www.health.go.ke/">aus.gov.au</a> for the latest Coronavirus news</string>
    <string name="intro_button">I want to help</string>
    <string name="how_it_works_headline">How BeSafe works</string>
    <string name="how_it_works_content">Bluetooth® signals are used to determine when you\'re near another BeSafe user.\n\nEvery instance of close contact between you and other BeSafe users is noted to create close contact information. The information is encrypted and only stored in your phone.\n\nIf you test positive to COVID-19 as a BeSafe user, a we will assist with voluntary upload of your close contact information to a highly secure information storage system\n\nWe can also contact you if you came in close contact with another BeSafe user who tested positive.</string>
    <string name="how_it_works_consent">Your consent will always be requested if health tracing is required.</string>
    <string name="how_it_works_privacy">Read our <a href="https://www.health.go.ke/#1585137302557-b337f64d-c55873d1-981a">Privacy Notice</a></string>
    <string name="how_it_works_terms_conditions">Read our <a href="https://www.health.go.ke/#1585137302557-b337f64d-c55873d1-981a">Terms and conditions</a></string>
    <string name="how_it_works_button">Next</string>
    <string name="data_privacy_headline">Registration and privacy</string>
    <string name="data_privacy_content">It is important that you read the BeSafe <a href="https://www.health.go.ke/#1585137302557-b337f64d-c55873d1-981a">privacy policy</a> before you register for BeSafe.\n\nIf you are under 16 years of age, your parent/guardian must also read the <a href="https://www.health.go.ke/#1585137302557-b337f64d-c55873d1-981a">privacy policy</a>.\n\nUse of BeSafe is completely voluntary. You can install or delete the application at any time.  To register for BeSafe, you will need to enter a name, mobile number, age range and your county.\n\nInformation you submit when you register, and information about your use of BeSafe will be collected and stored on a highly secure server.\n\nBeSafe will not collect your location information.\n\nBeSafe will note the time of contact and an anonymous ID code of other BeSafe users you come into contact with.\n\nOther BeSafe users you come into contact with will record an anonymous ID code and the time of contact with your device.\n\nIf another user tests positive to COVID-19, they may upload their contact information and we may contact you for tracing purposes.\n\nYour registration details will only be used or disclosed for contact tracing and for the proper and lawful functioning of BeSafe.\n\nSee the BeSafe <a href="https://www.health.go.ke/#1585137302557-b337f64d-c55873d1-981a">privacy policy</a> for further details about your rights about your information and how it will be handled and shared.</string>
    <string name="data_privacy_button">Next</string>
    <string name="registration_consent_headline">Registration consent</string>
    <string name="registration_consent_content">I consent to Visual Diagnoser collecting:</string>
    <string name="registration_consent_first_paragraph">My registration information to allow contact tracing</string>
    <string name="registration_consent_second_paragraph">My contact information from other BeSafe users after they test positive for COVID-19.</string>
    <string name="registration_consent_checkbox">I consent.</string>
    <string name="registration_consent_button">I agree</string>
    <string name="personal_details_headline">Enter your details</string>
    <string name="personal_details_name_title">Full name</string>
    <string name="personal_details_name_hint">Firstname Lastname</string>
    <string name="personal_details_age_title">Age</string>
    <string name="personal_details_age_hint">Age range</string>
    <string name="personal_details_post_code">Postcode</string>
    <string name="personal_details_post_code_hint">e.g. 2000</string>
    <string name="personal_details_disclaimer"><a href="https://www.health.go.ke/#1585137302557-b337f64d-c55873d1-981a">privacy policy</a></string>
    <string name="personal_details_post_code_dialog_title">Postcode</string>
    <string name="invalid_post_code">Invalid postcode</string>
    <string name="invalid_age">Age cannot be empty</string>
    <string name="invalid_name">Invalid name</string>
    <string name="personal_details_age_dialog_title">Select your age</string>
    <string name="personal_details_dialog_ok">Select</string>
    <string name="personal_details_button">Continue</string>
    <string-array name="personal_details_age_array">
        <item>8:0–15</item>
        <item>22:16–29</item>
        <item>35:30–39</item>
        <item>45:40–49</item>
        <item>55:50–59</item>
        <item>65:60–69</item>
        <item>75:70–79</item>
        <item>85:80–89</item>
        <item>95:90+</item>
    </string-array>
    <string name="under_sixteen_headline">You need the consent of your parent/guardian to proceed</string>
    <string name="under_sixteen_content">I confirm my parent or guardian consents to Visual Diagnoser collecting:</string>
    <string name="under_sixteen_first_paragraph">My registration information to allow contact tracing by state and territory health officials.</string>
    <string name="under_sixteen_second_paragraph">My contact information from other BeSafe users after they test positive for COVID-19.</string>
    <string name="under_sixteen_further_checkbox">I confirm.</string>
    <string name="under_sixteen_button">Continue</string>
    <string name="enter_number_headline">Enter your mobile number</string>
    <string name="invalid_phone_number">Invalid phone number.</string>
    <string name="enter_number_prefix">+254</string>
    <string name="oz_phone_number"><a href="https://www.visualdiagnoser.co.ke/">Use a Kenyan phone number.</a></string>
    <string name="enter_number_content">We’ll send you a six-digit PIN to verify your mobile number.</string>
    <string name="enter_number_relative">Trying to register on behalf of a friend or relative?\n\nThey will need to register using their own device and phone number so that BeSafe can work for them. </string>
    <string name="enter_number_button">Get PIN</string>
    <string name="enter_pin_headline">Enter the PIN sent to %s%s</string>
    <string name="enter_pin_wrong_number">Is this mobile number wrong?</string>
    <string name="enter_pin_timer_expire">Your PIN will expire in &#160;</string>
    <string name="wrong_ping_number"> Wrong PIN entered</string>
    <string name="enter_pin_resend_pin">Resend PIN</string>
    <string name="pin_issue"><a href="https://www.visualdiagnoser.co.ke/">Issues receiving your PIN?</a></string>
    <string name="enter_pin_button">Verify</string>
    <string name="permission_headline">App permissions</string>
    <string name="permission_content">BeSafe needs Bluetooth® and notifications enabled to work.\n\nSelect ‘Proceed’ to enable:\n\n1. Bluetooth®\n\n2. Location Permissions\n\n3. Battery Optimiser\n\n\nAndroid needs Location Permissions for Bluetooth® to work.</string>
    <string name="permission_button">Proceed</string>
    <string name="permission_location_rationale">Android requires location access to enable Bluetooth® functions for BeSafe. BeSafe cannot work properly without it</string>
    <string name="permission_success_headline">You\'ve successfully registered</string>
    <string name="permission_success_content">1. Keep your phone with you when you leave home.\n\n2. Keep the app running.\n\n3. Keep Bluetooth® on.</string>
    <string name="permission_success_warning">Keep push notifications on for BeSafe so we can notify you quickly if the app isn\'t working properly.</string>
    <string name="permission_success_button">Continue</string>
    <string name="home_header_active_title">BeSafe is active.\nNo further action is required.</string>
    <string name="home_header_inactive_title">BeSafe is not active.\nCheck your permissions.</string>
    <string name="home_header_uploaded_title">Thank you for helping stop the spread of COVID-19. Your information has been uploaded.</string>
    <string name="home_bluetooth_permission">Bluetooth®: %s</string>
    <string name="home_non_battery_optimization_permission">Battery optimization: %s</string>
    <string name="home_location_permission">Location: %s</string>
    <string name="home_push_notification_permission">Push Notification: %s</string>
    <string name="home_permission_on">On</string>
    <string name="home_permission_off">Off</string>
    <string name="home_app_permission_status_subtitle">BeSafe won\'t work without these permissions. </string>
    <string name="home_set_complete_external_link_share_title">Share BeSafe</string>
    <string name="home_set_complete_external_link_share_content">The more people use BeSafe, the better the app gets at stopping the spread of COVID-19. \n\nInvite others to join. Together, we’re stronger.</string>
    <string name="home_set_complete_external_link_been_contacted_title">Has a health official contacted you?</string>
    <string name="home_set_complete_external_link_been_contacted_content">You can only upload your information if you have tested positive.</string>
    <string name="ongoing_community">
        " \u2022 There is ongoing community spread of the virus in your local area or an area that you traveled to within 14 days of symptom onset"
    </string>
    <string name="healthcare_worker">
        " \u2022 You are a healthcare worker who has cared for a person with suspected or confirmed diagnosis of COVID-19 within 14 days of symptom onset"
    </string>
    <string name="close_contact">
        " \u2022 You have been in close contact with a person with confirmed diagnosis of COVID-19"
    </string>
</resources>