<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.home.newHome.selfassessment.RiskFragment">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.appcompat.widget.Toolbar
            android:layout_alignParentTop="true"
            android:id="@+id/toolbar"
            android:background="@android:color/white"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize">
            <ImageButton
                android:id="@+id/go_back_button"
                android:layout_margin="8dp"
                android:background="@android:color/white"
                android:src="@drawable/ic_keyboard_arrow_left_green_24dp"
                android:layout_width="48dp"
                android:layout_height="48dp"/>

            <TextView
                android:textColor="@android:color/black"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Coronavirus"
                android:textSize="16sp"
                android:textStyle="bold"
                android:layout_gravity="center"
                android:id="@+id/toolbar_title" />

        </androidx.appcompat.widget.Toolbar>

        <LinearLayout
            android:id="@+id/progress"
            android:layout_margin="20dp"
            android:layout_alignParentEnd="true"
            android:layout_below="@+id/toolbar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <ProgressBar
                android:progress="36"
                style="@style/Widget.AppCompat.ProgressBar.Horizontal"
                android:layout_width="200dp"
                android:layout_height="wrap_content"/>
            <TextView
                android:textSize="16sp"
                android:textStyle="bold"
                android:layout_marginStart="20dp"
                android:text="4 / 11"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </LinearLayout>


        <TextView
            android:textStyle="bold"
            android:gravity="center_horizontal"
            android:layout_centerHorizontal="true"
            android:textSize="20sp"
            android:text="Do you believe you may have been exposed to COVID-19?"
            android:id="@+id/title"
            android:layout_margin="20dp"
            android:layout_below="@+id/progress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <TextView
            android:gravity="center"
            android:layout_centerHorizontal="true"
            android:id="@+id/please"
            android:layout_below="@+id/title"
            android:text="Risk of exposure may occur under the following circumstances:"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <TextView
            android:textSize="16sp"
            android:id="@+id/mild"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="5dp"
            android:layout_below="@+id/please"
            android:text="@string/ongoing_community"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <TextView
            android:textSize="16sp"
            android:id="@+id/moderate"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:layout_below="@+id/mild"
            android:text="@string/healthcare_worker"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <TextView
            android:textSize="16sp"
            android:id="@+id/severe"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:layout_below="@+id/moderate"
            android:text="@string/close_contact"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <Button
            android:layout_centerHorizontal="true"
            android:elevation="8dp"
            android:textSize="16sp"
            android:layout_marginTop="40dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_below="@+id/severe"
            android:textAllCaps="false"
            android:id="@+id/yes_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Yes"
            android:textColor="@android:color/white"
            android:textStyle="bold" />
        <Button
            android:layout_centerHorizontal="true"
            android:elevation="8dp"
            android:textSize="16sp"
            android:layout_marginTop="20dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_below="@+id/yes_button"
            android:textAllCaps="false"
            android:id="@+id/no_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="No"
            android:textColor="@android:color/white"
            android:textStyle="bold" />

    </RelativeLayout>
</androidx.core.widget.NestedScrollView>
